[package]
name = "transmutation"
version = "0.1.0"
authors = ["Jason Dixon <jason.dixon.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "transmute"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]

# If in python 2. Replace features, above with these two lines
#default-features = false
#features = ["python27-sys", "extension-module-2-7"]
